fix sidebar visibilty issues for disability claims

--- a/src/sass/modules/_m-nav-sidebar.scss
+++ b/src/sass/modules/_m-nav-sidebar.scss
@@ -1,5 +1,5 @@
 //====================================
-// SCSS for content/components/navigation-sidebar.html 
+// SCSS for content/components/navigation-sidebar.html
 //====================================
 
 .va-sidebarnav {
@@ -16,6 +16,7 @@
     top: 0;
     transform: translateX(100%);
     transition: transform ease-out 250ms;
+    display: none;
 
     // Necessary to override .usa-grid .usa-width-one-fourth
     .va-l-detail-page & {
@@ -50,6 +51,7 @@
 
     &--opened {
       transform: translateX(0);
+      display: block;
     }
 
     &-close {
